authentication seems to be done in background.js
when I put the authentication code in popup.js, it does not work as I
expected.

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
     <script src="jquery-2.0.0.min.js"></script>
+    <script src="util.js"></script>
     <script src="popup.js"></script>
   </head>
   <body>
