--- a/chrome_oauth_receiver.html
+++ b/chrome_oauth_receiver.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Dropbox sign-in</title>
-    <script src="lib/dropbox.min.js" type="text/javascript"></script>
+    <script src="dropbox.min.js" type="text/javascript"></script>
     <script src="chrome_oauth_receiver.js" type="text/javascript">
     </script>
   </head>
