dropbox authentication is invoked when popup is shown.

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,7 @@
     <script src="popup.js"></script>
   </head>
   <body>
+      <div id="username">(not login)</div>
       <table>
           <tbody id="wordtable"></tbody>
       </table>
